# kio

./: gradle.properties  justfile  settings.gradle.kts
convention-plugins/src/main/kotlin/: root.publication.gradle.kts
docs/: toolchain.md
example/: build.gradle.kts
example/src/nativeMain/kotlin/: Main.kt
gradle/: libs.versions.toml
nativeInterop/cinterop/: aarch64-apple-darwin.def  aarch64-unknown-linux-gnu.def  x86_64-apple-darwin.def  x86_64-pc-windows-gnu.def  x86_64-unknown-linux-gnu.def
rio/: Cargo.toml  justfile  rio.h  rust-toolchain.toml
rio/rio/: Cargo.toml  build.rs
rio/rio/src/: error.rs  ffi_util.rs  io.rs  lib.rs  macros.rs  result.rs  rio.rs  type_wrapper.rs
rio/rio/src/io/: typed_read.rs  typed_write.rs
rio/rio/src/rio/: rio_read.rs  rio_read_ref.rs  rio_write.rs  rio_write_ref.rs
rio_example/: CMakeLists.txt  main.c
