[package]
name = "rio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "rio"
crate-type = ["rlib", "staticlib"]

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cbindgen = "0.27.0"
